k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: preview-proxy-ns
  labels:
    env: stage
    owner: fe
    system: preview-proxy
    app: preview-proxy
